--- a/index.html
+++ b/index.html
@@ -23,21 +23,24 @@
                 </div>
 
                 <div class="card-wrapper">
-                    <div class="cards card1">
+                    <input id="cards" type="radio" name="asdf" class="card__inp">
+                    <label for="cards" class="cards card1">
                         <img class="icons-svg" src="./images/visa.svg" height="14" width="55">
                         <p class="number"><span class="number-span"> **** **** **** </span> 2562 </p>
                         <p class="time">Valid thru: 12/17</p>
-                    </div>
-                    <div class="cards card2">
+                    </label>
+                    <input id="cards2" type="radio" name="asdf" class="card__inp">
+                    <label for="cards2" class="cards card2">
                         <img class="icons-svg icons-svg2" src="./images/mastercard.svg" height="30" width="55">
                         <p class="number"><span class="number-span"> **** **** **** </span> 2101 </p>
                         <p class="time">Valid thru: 07/19</p>
-                    </div>
-                    <div class="cards card3">
+                    </label>
+                    <input id="cards3" type="radio" name="asdf" class="card__inp">
+                    <label for="cards3" class="cards card3">
                         <img class="icons-svg icons-svg3" src="./images/maestro.svg" height="30" width="55">
                         <p class="number"><span class="number-span"> **** **** **** </span> 8335 </p>
                         <p class="time">Valid thru: 09/17</p>
-                    </div>
+                    </label>
 
                 </div>
             </div>
